Bug 1638886 - [RTL] Fix misaligned eye icon in the simulation section in the Accessibility panel r=nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D75813

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -750,6 +750,7 @@
   align-items: center;
   justify-content: center;
   font-weight: 600;
+  direction: ltr;
 }
 
 #print-simulation-toggle::before {
